<resources>
    <string name="app_name" translatable="false">Reflektt</string>
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="facebook_app_id" translatable="false">217668425362646</string>
    <string name="server_client_id" translatable="false">376698655062-sqv1emrte17t9e5675agm1k7tvkp7edb.apps.googleusercontent.com</string>
    <string name="hello_blank_fragment" translatable="false">blank!!</string>

    <!--- for Croperino -->
    <string name="saving_image">Saving image</string>
    <string name="preparing_card" translatable="false">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>

    <!--- Text to be translated-->
    <string name="error">Error Occurred, please try again later</string>
    <string name="thanks_rate">Thanks for your rate</string>
    <string name="view_all_comments"><u>View all comments</u></string>
    <string name="title_activity_sort">SortActivity</string>
    <string name="title_activity_add_product">AddProduct</string>
    <string name="addproduct" translatable="false">As our database isn\'t perfect, we need your help.\nYou can put a product that we don\'t have and we will add it to our products after one of our team revise it</string>
    <string name="about">What\'s Reflektt? Reflektt is a platform seek to reduce girl\'s confusion in choosing makeup and cosmetics and the risk of spending money on the wrong product by a simple use of an app allows products\'s reviews of girl\'s experience, save what you like in your favourite and be update with the latest product\'s review.</string>
    <string name="search_hint">Type what you want to search..</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="select_a_photo">Select a photo</string>
    <string name="product_name">Product name</string>
    <string name="product_brand">Product Brand</string>
    <string name="submit">Submit</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register_now">Don\'t Have Account ? Register Now !</string>
    <string name="or">Or Sign in with</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="post_on_reflektt">Post on Reflektt</string>
    <string name="post">Post</string>
    <string name="write_a_post">Write a post..</string>
    <string name="write_a_comment">Write a comment....</string>
    <string name="updated_products">Updated Products</string>
    <string name="more">MORE</string>
    <string name="no_products">No products to show</string>
    <string name="suggested_users">Suggested Users</string>
    <string name="posts">Posts</string>
    <string name="no_posts">No posts to show</string>
    <string name="add_favorite">Add favorite</string>
    <string name="rate_this_product">Rate this product</string>
    <string name="share_your_experience">Share your experience....</string>
    <string name="more_products_from">More Products from</string>
    <string name="username">Username</string>
    <string name="empty">Empty</string>
    <string name="follow">Follow</string>
    <string name="favorites">Favorites</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="is_private">This account is private Follow user to show her posts</string>
    <string name="step_4">Step 4:</string>
    <string name="step4_text">Upload your profile picture</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="step1_text">Enter your e-mail and password.</string>
    <string name="step_1">Step 1:</string>
    <string name="check">Check</string>
    <string name="step_3_text">Enter your username, your username must be unique because it will identify you.</string>
    <string name="step_3">Step 3:</string>
    <string name="last_name">Last name</string>
    <string name="first_name">First name</string>
    <string name="step_2_text">Enter your first and second name, Your name will be visible to all users</string>
    <string name="step_2">Step 2:</string>
    <string name="favored">Favored</string>
    <string name="processing">Processing</string>
    <string name="unfollow">Unfollow</string>
    <string name="name">Name</string>
    <string name="biography">Biography</string>
    <string name="profilePicture">Profile Picture</string>
    <string name="privacy">Post Privacy</string>
    <string name="about_us">About us</string>
    <string name="please_wait">Please wait..</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="logout_q">Are you sure you want to logout?</string>
    <string name="exit_q">Are you sure you want to exit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="finish">Finish</string>
    <string name="ok">OK</string>
    <string name="enter_email">Please enter your e-mail</string>
    <string name="enter_pass">Please enter your password</string>
    <string name="mismatch">Your password doesn\'t match</string>
    <string name="username_taken">The username is taken</string>
    <string name="username_valid">The username is valid</string>
    <string name="existing_username">You entered an existing username,please change your username</string>
    <string name="not_checked">You have not checked your username, please click the "Check" button</string>
    <string name="firstname">Please enter your first name</string>
    <string name="lastname">Please enter your last name</string>
    <string name="not_profile">You didn\'t select a photo, please select a profile picture</string>
    <string name="logging_in">Logging In…</string>
    <string name="brands">Brands</string>
    <string name="types">Product Types</string>
    <string name="add_product">Add Product</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>
    <string name="privacy_public"> Public </string>
    <string name="privacy_private"> Only followers </string>
    <string name="profileQuery">Search "Profiles" by </string>
    <string name="productsQuery">Search "Products" by </string>
    <string name="no_match_for_query">No match for query</string>
    <string name="invalid_char">There are invalid characters in username</string>
    <!--end of translation -->


    <string-array name="privacy_options">
        <item>@string/privacy_public</item>
        <item>@string/privacy_private</item>
    </string-array>
    <string-array name="nav_drawer">
        <item>@string/brands</item>
        <item>@string/types</item>
        <item>@string/add_product</item>
        <item>@string/settings</item>
        <item>@string/logout</item>
    </string-array>
    <string-array name="settings">
        <item>@string/name</item>
        <item>@string/password</item>
        <item>@string/biography</item>
        <item>@string/profilePicture</item>
        <item>@string/privacy</item>
        <item>@string/about_us</item>
    </string-array>


</resources>
