<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen1"
    tools:context="com.reflektt.reflektt.RegisterSteps.StepOne">

    <TextView
        android:id="@+id/step1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:text="@string/step_1"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/step1"
        android:layout_below="@id/step1"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="20dp"
        android:text="@string/step1_text"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:ems="10"
        android:hint="Email"
        android:textColor="@android:color/white"
        android:inputType="textEmailAddress"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_email"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:ems="10"
        android:textColor="@android:color/white"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/reg_password"
        android:layout_centerInParent="true"
        android:ems="10"
        android:textColor="@android:color/white"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColorHint="@android:color/white" />


</RelativeLayout>

