<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context="com.reflektt.reflektt.HomeFragments.AddPost.AddPost_Phase2">

    <TextView
        android:id="@+id/post_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/post_btn"
        android:layout_alignTop="@+id/post_btn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:text="@string/post_on_reflektt"
        android:textColor="#000"
        android:textSize="18sp" />

    <Button
        android:id="@+id/post_btn"
        android:layout_width="150dp"
        android:layout_height="30dp"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"
        android:background="@color/colorPrimary"
        android:text="@string/post"
        android:textColor="#fff" />

    <EditText
        android:id="@+id/post"
        style="@style/FullWidthEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/post_text"
        android:layout_marginTop="10dp"
        android:gravity="start"
        android:hint="@string/write_a_post"
        android:lines="3" />

    <ImageView
        android:id="@+id/post_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:layout_below="@id/post" />
</RelativeLayout>
