<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    tools:context="com.reflektt.reflektt.SearchActivity">

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:clickable="true"
        android:hint="@string/search_hint" />
    <View
        android:id="@+id/tint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0"
        android:background="#000"
        android:layout_below="@id/search_bar"/>
    <FrameLayout
        android:id="@+id/fragment_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@id/search_bar">

        <ProgressBar
            android:id="@+id/search_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

        <TextView
            android:id="@+id/empty_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/no_match_for_query"
            android:visibility="gone" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/queries"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_bar"
        android:background="#fff"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:id="@+id/profiles_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:paddingStart="30dp"
            android:text="@string/profileQuery"
            android:textColor="#000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/products_query"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:paddingStart="30dp"
            android:text="@string/productsQuery"
            android:textColor="#000"
            android:textSize="16sp" />

    </LinearLayout>


</RelativeLayout>
