<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_screen4"
    tools:context="com.reflektt.reflektt.RegisterSteps.StepFour">

    <TextView
        android:id="@+id/step4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="100dp"
        android:text="@string/step_4"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/step4"
        android:layout_below="@id/step4"
        android:layout_marginBottom="25dp"
        android:layout_marginStart="20dp"
        android:text="@string/step4_text"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/preview_pic"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_centerInParent="true"
        android:layout_margin="5dp"
        android:src="@drawable/profile_default" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/preview_pic"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal"
        android:paddingTop="30dp">

        <LinearLayout
            android:id="@+id/camera_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:tint="@android:color/white"
                android:src="@drawable/ic_camera" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/take_a_photo"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/gallery_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:clickable="true"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_gravity="center_horizontal"
                android:adjustViewBounds="true"
                android:tint="@android:color/white"
                android:src="@drawable/ic_photo_library" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/select_a_photo"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>


    </LinearLayout>
</RelativeLayout>
