<android.support.v4.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.reflektt.reflektt.HomeFragments.HomeFragment">

    <FrameLayout
        android:id="@+id/home_fragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#fff">


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_marginStart="10dp"
                        android:text="@string/updated_products"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/more"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="25dp"
                        android:text="@string/more"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />
                </RelativeLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ProgressBar
                        android:id="@+id/products_load"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/products_view"
                        android:layout_width="match_parent"
                        android:layout_height="230dp"
                        android:orientation="horizontal"
                        android:scrollbars="horizontal" />

                    <TextView
                        android:id="@+id/products_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/no_products"
                        android:textSize="14sp"
                        android:visibility="gone" />
                </FrameLayout>


                <RelativeLayout
                    android:id="@+id/suggestUsers"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_margin="10dp"
                        android:text="@string/suggested_users"
                        android:textColor="#000"
                        android:textSize="15sp" />

                    <ProgressBar
                        android:id="@+id/suggestUsersLoad"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/users_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_below="@id/text"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical"
                        android:scrollbars="none" />
                </RelativeLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@string/posts"
                    android:textColor="#000"
                    android:textSize="15sp" />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1">

                    <ProgressBar
                        android:id="@+id/posts_load"
                        style="@style/Widget.AppCompat.ProgressBar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />

                    <android.support.v7.widget.RecyclerView
                        android:id="@+id/posts_view"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical"
                        android:scrollbars="none" />

                    <TextView
                        android:id="@+id/posts_error"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/no_posts"
                        android:textSize="14sp"
                        android:visibility="gone" />
                </FrameLayout>
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </FrameLayout>
</android.support.v4.widget.SwipeRefreshLayout>